# transcript-macos

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
src/: cli.py  gui.py  transcriber.py
